# C-CPP_CMake_GTest-GithubActions

./: .clang-format  .gitignore  .linelint.yml  CMakeLists.txt  LICENSE  README.md
.github/: pr-labeler.yml
.github/workflows/: Build.yml  CI.yml  Code-Hygiene.yml  Test.yml  pr-labeler.yml
src/: CMakeLists.txt  example.cpp  example.hpp  main.cpp
src/Example/: CMakeLists.txt  example.cpp  example.hpp  example2.cpp  example2.hpp
src/NestedDirExample/: CMakeLists.txt  nestedTop.cpp  nestedTop.hpp
src/NestedDirExample/NestedDir/: CMakeLists.txt  nestedBottom.cpp  nestedBottom.hpp
test/: CMakeLists.txt  gtest_validation_test.cpp
test/yourTests/: CMakeLists.txt  gtest_validation_test.cpp
test/yourTestsb/: CMakeLists.txt  gtest_validation_test_b.cpp
